aplicando variables locales de un .env

--- a/ModeliFy/views/partials/nav-bar.ejs
+++ b/ModeliFy/views/partials/nav-bar.ejs
@@ -14,6 +14,7 @@
     <div class="logos-nav">
         <a class="cart-conteiner" href="/cart">
             <i class="fa-solid fa-cart-shopping"></i>
+             <!-- carrito -->
         </a>
         <% if (locals.isLogged) { %>
             <a class="user-content" href="/users/profile">
