--- a/ModeliFy/public/css/home.css
+++ b/ModeliFy/public/css/home.css
@@ -12,6 +12,7 @@ body{
     padding: 0;
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: #cccccc;
 }
 
 /* Comienza la barra de navegacion */
@@ -24,7 +25,11 @@ body{
 }
 
 .log-page{
-    width: 8rem;  
+    width: 8rem;
+    height: 5.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .icon-logo-page{
@@ -49,12 +54,14 @@ nav > form{
     font-size: 16px;
     font-family: 'Lexend', sans-serif;
     color: #333333;
-    margin-left: 14px;
+    padding: 5px;
+    /* margin-left: 14px; */
     outline: none;
     border: none;
     background-color: transparent;
     width: 300px;
 }
+
 
 .logos-nav{
     width: 300px;
@@ -82,6 +89,11 @@ nav > form{
     border-radius: 25px;
     align-items: center;
     padding: 1% 1%;
+}
+
+.logos-nav a{
+    text-decoration: none;
+    color: whitesmoke;
 }
 
 .user-content:active{
